# mtklogo

./: Cargo.toml  README.org  flake.nix
cli/: Cargo.toml
cli/src/: main.rs
cli/src/command/: explore.rs  guess.rs  meta.rs  mod.rs  repack.rs  unpack.rs
cli/src/config/: mod.rs
src/: lib.rs
src/mtk/: header.rs  logo.rs  mod.rs
src/utils/: image.rs  mod.rs  z_lib_flate2.rs  z_lib_libflate.rs
tests/: integration_test.rs
