# see https://github.com/Haml-rs/haml-rs/blob/master/Cargo.toml
# for a 'similar' tool (a CLI and a lib)
[package]
name = "mtklogo"
version = "0.1.2"
authors = ["arlept <arnaud@lepoint.net>"]
edition = "2024"
# see https://spdx.org/licenses/
license = "MIT OR Apache-2.0"
description = "A Rust library for parsing MTK logo images."
repository = "https://github.com/cyberknight777/mtklogo"
keywords = ["Android", "MTK", "Logo"]
categories = ["development-tools"]
readme = "README.md"

[features]
default = ["with-flate2"]
with-libflate = ["libflate"]
with-flate2 = ["flate2"]

[lib]
name = "mtklogo"
path = "src/lib.rs"
test = true

[dependencies]
# reading raw bytes little/big endian, etc.
byteorder = "1.5.0"
png = "0.18.1"

# image decompression using pure rust implementation.
# it's nice but does not support level 9 compression...
# kept as an optional dependency if for some reason someone requires a "pure rust" program.
[dependencies.libflate]
version = "2.3.0"
optional = true

# zlib with the system libz backend (better ratios than the default miniz).
[dependencies.flate2]
version = "1.1.9"
optional = true
features = ["zlib"]

[workspace]
members = [
    "cli",
]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
