# see https://github.com/Haml-rs/haml-rs/blob/master/Cargo.toml
# for a 'similar' tool (a CLI and a lib)
[package]
name = "mtklogo-cli"
version = "0.1.2"
authors = ["arlept <arnaud@lepoint.net>"]
edition = "2024"
# see https://spdx.org/licenses/
license = "MIT OR Apache-2.0"
description = "A Rust library and CLIT tool for parsing MTK logo images."
repository = "https://github.com/cyberknight777/mtklogo"
keywords = ["Android", "MTK", "Logo"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "mtklogo"
path = "src/main.rs"

[dependencies]
mtklogo = { version = "0.1.2", path = "../" }
# command line parsing
clap = { version = "4.6.1", features = ["cargo"] }
# colored output
colored = "3.1.1"
# configuration file parsing
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.28"